# hass-pc-mon

./: Cargo.toml  flake.nix
.cargo/: config.toml
docs/superpowers/plans/: 2026-06-02-hass-pc-mon.md
docs/superpowers/specs/: 2026-06-02-hass-pc-mon-design.md
nix/: darwin-module.nix  nixos-module.nix
src/: cli.rs  config.rs  discovery.rs  host.rs  logging.rs  main.rs  mqtt.rs  sample.rs
src/install/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
